--- a/design/css/design.css
+++ b/design/css/design.css
@@ -117,12 +117,12 @@ body main footer {
   background-size: cover;
 }
 
-@media only screen and (min-width: 375px) {
+@media only screen and (min-width: 300px) {
   .card-box {
     width: 80% !important;
   }
   .contact {
-    width: 50%;
+    width: 30 !important%;
   }
 }
 
@@ -131,16 +131,16 @@ body main footer {
     width: 50% !important;
   }
   .contact {
-    width: 30%;
+    width: 30% ! important;
   }
 }
 
 @media only screen and (min-width: 1068px) {
   .card-box {
-    width: 35% !important;
+    width: 40% !important;
   }
   .contact {
-    width: 10%;
+    width: 10% ! important;
   }
 }
 /*# sourceMappingURL=design.css.map */
