--- a/design/css/design.css
+++ b/design/css/design.css
@@ -14,7 +14,7 @@
   margin: 0;
   padding: 0;
   -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  box-sizing: border-box;
   text-transform: uppercase;
   text-align: center;
   font-weight: 700;
@@ -37,11 +37,11 @@ body main {
   display: flex;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+  -ms-flex-direction: column;
+  flex-direction: column;
   -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
   padding-top: 8rem;
 }
 
@@ -56,11 +56,11 @@ body main section {
   display: -ms-flexbox;
   display: flex;
   -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
   -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
   color: var(--gblue);
 }
 
@@ -70,14 +70,14 @@ body main section .timer {
   display: flex;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+  -ms-flex-direction: column;
+  flex-direction: column;
   -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
   -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
   width: 20%;
 }
 
@@ -87,10 +87,19 @@ body main section .card-box {
   text-align: center;
   font-size: 2.4rem;
   border-radius: 3px;
-  background: -webkit-gradient(linear, left top, left bottom, color-stop(50%, var(--desblue)), color-stop(50%, var(--desblue2)));
+  background: -webkit-gradient(
+    linear,
+    left top,
+    left bottom,
+    color-stop(50%, var(--desblue)),
+    color-stop(50%, var(--desblue2))
+  );
   background: linear-gradient(var(--desblue) 50%, var(--desblue2) 50%);
-  -webkit-box-shadow: 0 4px 6px rgba(0, 0, 0, 0.015), 0 8px 8px rgba(0, 0, 0, 0.035), 0 12px 10px rgba(0, 0, 0, 0.055), 0 16px 12px rgba(0, 0, 0, 0.075);
-          box-shadow: 0 4px 6px rgba(0, 0, 0, 0.015), 0 8px 8px rgba(0, 0, 0, 0.035), 0 12px 10px rgba(0, 0, 0, 0.055), 0 16px 12px rgba(0, 0, 0, 0.075);
+  -webkit-box-shadow: 0 4px 6px rgba(0, 0, 0, 0.015),
+    0 8px 8px rgba(0, 0, 0, 0.035), 0 12px 10px rgba(0, 0, 0, 0.055),
+    0 16px 12px rgba(0, 0, 0, 0.075);
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.015), 0 8px 8px rgba(0, 0, 0, 0.035),
+    0 12px 10px rgba(0, 0, 0, 0.055), 0 16px 12px rgba(0, 0, 0, 0.075);
 }
 
 body main section .card-label {
@@ -99,8 +108,8 @@ body main section .card-label {
 
 body main .contact {
   -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
   margin: 4rem auto;
 }
 
@@ -115,6 +124,18 @@ body main footer {
   background: url(../images/pattern-hills.svg) !important;
   background-repeat: no-repeat;
   background-size: cover;
+}
+
+@media only screen and (min-width: 250px) {
+  .card-box {
+    width: 90% !important;
+  }
+  .contact {
+    width: 50%;
+  }
+  body main section .card-box {
+    font-size: 1rem;
+  }
 }
 
 @media only screen and (min-width: 375px) {
