--- a/design/css/design.css
+++ b/design/css/design.css
@@ -143,7 +143,7 @@ body main footer {
     width: 80% !important;
   }
   .contact {
-    width: 30 !important%;
+    width: 30% !important;
   }
 }
 
@@ -152,7 +152,10 @@ body main footer {
     width: 50% !important;
   }
   .contact {
-    width: 30% ! important;
+    width: 30% !important;
+  }
+  body main section .card-box {
+    font-size: 1.6rem;
   }
 }
 
@@ -161,7 +164,10 @@ body main footer {
     width: 40% !important;
   }
   .contact {
-    width: 10% ! important;
+    width: 10% !important;
+  }
+  body main section .card-box {
+    font-size: 2.4rem;
   }
 }
 /*# sourceMappingURL=design.css.map */
